<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, EcologicalActivity!</string>
    <string name="app_name">Ecological</string>
    <string name="species">Species Name:</string>
    <string name="notes">Notes:</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="add">Add</string>
    <string name="menu_add">Add data to database</string>
    <string name="menu_view">View database</string>
    <string name="back">Back</string>
    <string name="capture">Capture</string>
    <string name="take_picture">Take Picture</string>

</resources>