<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageButton
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />
    
    <TextView 
        android:id="@+id/species_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/species" />
    
    <EditText 
        android:id="@+id/species_name"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView 
        android:id="@+id/note_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes" />
    
    <EditText 
        android:id="@+id/note"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
    
    <TextView 
        android:id="@+id/lat_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lat" />
    
    <EditText 
        android:id="@+id/lat"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:editable="false" />
    
    <TextView 
        android:id="@+id/lon_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lon" />
    
    <EditText 
        android:id="@+id/lon"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:editable="false" />
    
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>